versioned_docs/version-2.9.0/Getting-started/Examples/command-handling.mdx
---
id: command-handling
title: Command handling
description: Command handling
slug: /getting-started/examples/command-handling
sidebar_position: 4
hide_title: true
sidebar_label: 🧠 Command handling
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Command handling

Unless your bot project is small, it's not a very good idea to have a single file with a giant `if`/`else` if chain for commands. If you want to implement features into your bot and make your development process a lot less painful, you'll want to implement a command handler. Let's get started on that!

:::tip
💡 For fully functional slash commands, there are three important pieces of code that need to be written. They are:

1. The [`individual command files`](/docs/getting-started/examples/creating-commands), containing their definitions and functionality.
2. The command handler, which dynamically reads the files and executes the commands.
3. The [`command deployment script`](/docs/getting-started/examples/deployment-script), to register your slash commands with Discord so they appear in the interface.

These steps can be done in any order, but **all are** required before the commands are fully functional.

This page details how to complete **Step 2**. Make sure to also complete the other pages linked above!
:::

## Loading command files

:::::info
ℹ️ This page requires you to have a valid [main file](/docs/getting-started/examples/main-file) and have at least created `one` command following [these steps](/docs/getting-started/examples/creating-commands).
::::warning
⚠️ Please make sure to select below the command creation "step" you need. The section below is divided into "Handling interaction commands" and "Handling message commands".
::::
:::::

<Tabs>
	<TabItem value="interaction events" label="Handling interaction commands" default>
		Now that your command files have been created, your bot needs to load these files on startup.
        
        In your `index.js` file, make these additions to the base template:

        ```javascript ${1-3,39} showLineNumbers
        const fs = require("node:fs");
        const path = require("node:path");
        const { Client, Collection, Events, GatewayIntentBits, MessageFlags } = require("discord.js");
        const { Manager, SearchPlatform, AutoPlayPlatform, TrackPartial } = require("magmastream");
        const config = require("./config.js");

        // Create a new client instance
        const client = new Client({
            intents: [GatewayIntentBits.Guilds, GatewayIntentBits.GuildVoiceStates, GatewayIntentBits.MessageContent],
        });

        // Assign Manager to the client
        client.manager = new Manager({
            playNextOnEnd: true, // Optional - Recommanded to be true
            enablePriorityMode: false, // Optional - Recommanded if you have more than 1 node
            normalizeYouTubeTitles: true, // Optional - Recommanded to be true
            trackPartial: [
                TrackPartial.Author,
                TrackPartial.ArtworkUrl,
                TrackPartial.Duration,
                TrackPartial.Identifier,
                TrackPartial.PluginInfo,
                TrackPartial.Requester,
                TrackPartial.SourceName,
                TrackPartial.Title,
                TrackPartial.Track,
                TrackPartial.Uri,
            ], // Optional but recommanded!
            defaultSearchPlatform: SearchPlatform.YouTube, // Optional - Assuming YouTube is enabled on Lavalink
            autoPlaySearchPlatforms: [AutoPlayPlatform.Spotify, AutoPlayPlatform.Deezer, AutoPlayPlatform.YouTube], // Optional
            nodes: config.nodes,
            send: (packet) => {
                const guild = client.guilds.cache.get(packet.d.guild_id);
                if (guild) guild.shard.send(packet);
            },
        });

        // Store commands
        client.commands = new Collection();

        // Log in the client
        client.login(config.token);
        ```

        We recommend attaching a `.commands` property to your client instance so that you can access your commands in other files. The rest of the examples in this guide will follow this convention. For TypeScript users, we recommend extending the base Client class to add this property, [casting <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://www.typescripttutorial.net/typescript-tutorial/type-casting/), or [augmenting the module type <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://www.typescriptlang.org/docs/handbook/declaration-merging.html#module-augmentation).

        :::tip
        - The [`fs`](https://nodejs.org/api/fs.html)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/> module is Node's native file system module. `fs` is used to read the `commands` directory and identify our command files.
        - The [`path`](https://nodejs.org/api/path.html)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/> module is Node's native path utility module. `path` helps construct paths to access files and directories. One of the advantages of the path module is that it automatically detects the operating system and uses the appropriate joiners.
        - The [`Collection`](https://discord.js.org/docs/packages/collection/stable/Collection:Class)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/> class extends JavaScript's native [`Map`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/> class, and includes more extensive, useful functionality. `Collection` is used to store and efficiently retrieve commands for execution.
        :::

        Next, using the modules imported above, dynamically retrieve your command files with a few more additions to the `index.js` file:

        ```javascript ${3-29} showLineNumbers
        client.commands = new Collection();

        const foldersPath = path.join(__dirname, "commands");

        const loadCommands = (folderPath) => {
            const commandFiles = fs.readdirSync(folderPath);

            for (const file of commandFiles) {
                const filePath = path.join(folderPath, file);
                const stat = fs.statSync(filePath);

                if (stat.isDirectory()) {
                    // If it's a directory, recursively load commands from it
                    loadCommands(filePath);
                } else if (file.endsWith(".js")) {
                    const command = require(filePath);
                    // Set a new item in the Collection with the key as the command name and the value as the exported module
                    if ("data" in command && "execute" in command) {
                        console.log(`[INFO] Loaded command: ${command.data.name}`);
                        client.commands.set(command.data.name, command);
                    } else {
                        console.log(`[WARNING] The command at ${filePath} is missing a required "data" or "execute" property.`);
                    }
                }
            }
        };

        // Load commands from the main commands folder
        loadCommands(foldersPath);
        ```
        - `loadCommands()` recursively scans the `commands` folder and its subfolders using `fs.readdirSync` and `fs.statSync`, checking if a file is a directory (to recurse deeper) or a `.js` file (to process as a command).
        - For each `.js` file, it imports the command module, checks if it has the required `data` (command metadata) and `execute` (function to run) properties, and adds valid commands to the `client.commands` Collection.
        - Valid commands are logged with their name, while invalid ones trigger a warning about missing properties, ensuring only properly structured commands are loaded.

        <br>
        </br>

        ## Receiving command interactions

        You will receive an interaction for every slash command executed. To respond to a command, you need to create a listener for the [`Client#interactionCreate`](https://discord.js.org/docs/packages/discord.js/stable/Client:Class#interactionCreate)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/> event that will execute code when your application receives an interaction. Place the code below in the `index.js` file you created earlier.
        ```javascript showLineNumbers
        client.on(Events.InteractionCreate, interaction => {
            console.log(interaction);
        });
        ```
        Not every interaction is a slash command (e.g. `MessageComponent` interactions). Make sure to only handle slash commands in this function by making use of the [`BaseInteraction#isChatInputCommand()`](https://discord.js.org/docs/packages/discord.js/stable/BaseInteraction:Class#isChatInputCommand)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/> method to exit the handler if another type is encountered. This method also provides typeguarding for TypeScript users, narrowing the type from `BaseInteraction` to [`ChatInputCommandInteraction`](https://discord.js.org/docs/packages/discord.js/stable/ChatInputCommandInteraction:Class)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>.

        ```javascript ${2} showLineNumbers
        client.on(Events.InteractionCreate, interaction => {
            if (!interaction.isChatInputCommand()) return;
            console.log(interaction);
        });
        ```

        <br>
        </br>

        ## Executing slash commands

        When your bot receives a [`Client#interactionCreate`](https://discord.js.org/docs/packages/discord.js/stable/Client:Class#interactionCreate)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/> event, the interaction object contains all the information you need to dynamically retrieve and execute your commands!

        Let's take a look at the `play` command again. Note the execute() function that will reply to the interaction with "Playing your song/playlist!".

        ```javascript showLineNumbers
        module.exports = {
            data: new SlashCommandBuilder()
                .setName("play")
                .setDescription("Play a song/playlist.")
                .addStringOption((option) => option.setName("query").setDescription("The search query for the song/playlist").setRequired(true)),
            async execute(client, interaction) {
                await interaction.reply('Playing your song/playlist!')
            }
        }
        ```
        First, you need to get the matching command from the `client.commands` Collection based on the `interaction.commandName`. If no matching command is found, log an error to the console and ignore the event. Then we pass your [`Client`](https://discord.js.org/docs/packages/discord.js/stable/Client:Class)<i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/> instance as parameter into the execute() function.

        ```javascript ${1,3-27} showLineNumbers
        client.on(Events.InteractionCreate, async interaction => {
                // Only handle chat input commands
            if (!interaction.isChatInputCommand()) return;

            // Get the command from the command collection
            const command = client.commands.get(interaction.commandName);

            // If no command is found, log an error
            if (!command) {
                console.error(`No command matching ${interaction.commandName} was found.`);
                return;
            }

            try {
                // Execute the command
                await command.execute(client, interaction);
            } catch (error) {
                // Log the error
                console.error(error);

                // Reply with an ephemeral message if the interaction has already been replied to
                if (interaction.replied || interaction.deferred) {
                    await interaction.followUp({ content: 'There was an error while executing this command!', flags: MessageFlags.Ephemeral });
                } else {
                    await interaction.reply({ content: 'There was an error while executing this command!', flags: MessageFlags.Ephemeral });
                }
            }
        })
        ```
    </TabItem>
    <TabItem value="message events" label="Handling message commands">

    </TabItem>

</Tabs>

## Next steps

1. We'll create an [event handler](/docs/getting-started/examples/event-handling) to clean up our `index.js` file.
2. We'll create a [deployment script] for our slash commands.

## Resulting code

If you want to compare your code to the final result after completing all the steps in this guide, you can review it on the GitHub repository [here <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/Magmastream-NPM/magmastream_basics_bot/tree/js-v2.9.0/src).
